[gd_scene load_steps=9 format=3 uid="uid://7ovg5o0kjlpc"]

[ext_resource type="Script" path="res://objects/door/door.gd" id="1_mphy5"]
[ext_resource type="Texture2D" uid="uid://c6wlcg1evp0xu" path="res://kenney_1-bit-platformer-pack/Tiles/Transparent/tile_0056.png" id="2_omnlv"]
[ext_resource type="Texture2D" uid="uid://htpqes7ud4t8" path="res://kenney_1-bit-platformer-pack/Tiles/Transparent/tile_0058.png" id="3_evhm4"]
[ext_resource type="FontFile" uid="uid://cwprqlc65vxx1" path="res://fonts/Symtext.ttf" id="4_2psr5"]
[ext_resource type="Texture2D" uid="uid://bsafrc24cqf3l" path="res://kenney_1-bit-platformer-pack/Tiles/Transparent/tile_0059.png" id="4_emgpv"]

[sub_resource type="SpriteFrames" id="SpriteFrames_chsyj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_omnlv")
}, {
"duration": 1.0,
"texture": ExtResource("3_evhm4")
}, {
"duration": 1.0,
"texture": ExtResource("4_emgpv")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gwsl1"]
size = Vector2(14, 15)

[sub_resource type="LabelSettings" id="LabelSettings_74xnn"]
line_spacing = 2.08165e-12
font = ExtResource("4_2psr5")
font_size = 8

[node name="door" type="Area2D"]
script = ExtResource("1_mphy5")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_chsyj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_gwsl1")

[node name="Text" type="Label" parent="."]
visible = false
offset_left = -24.0
offset_top = -21.0
offset_bottom = -8.0
label_settings = SubResource("LabelSettings_74xnn")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
